--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
             <div class="modal-body">
                 <img src="resources/images/our-team_cap.jpg" class="img-responsive"><br>
-                <button type="button" class="btn btn-default" onclick="location.href='http://www.servermonkey.com/our-team';" value="Visit Site">Visit Site</button><br>
+                <button type="button" class="btn btn-default" onclick="open.window('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
             </div>
             <div class="modal-footer">
                 <p>Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
