--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 <div class="right-main col-lg-10 col-sm-9 col-xs-12">
     <div class="col-lg-3 col-sm-4 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-4 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-4 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-4 col-xs-12">
@@ -34,12 +40,6 @@
     </div>
     <div class="col-lg-3 col-sm-4 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
-    </div>
-    <div class="col-lg-3 col-sm-4 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
-    </div>
-    <div class="col-lg-3 col-sm-4 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
     </div>
 </div>
 
@@ -141,7 +141,7 @@
             </div>
             <div class="modal-body">
                 <img src="resources/images/our-team_cap.jpg" class="img-responsive"><br>
-                <button type="button" class="btn btn-default" onclick="open.window('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
+                <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
             </div>
             <div class="modal-footer">
                 <p>Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
