--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="modal-body">
                 <div id="jedi-gif"><img src="resources/images/jedi-logo.gif"></div><br>
-                <button type="button" class="replay btn btn-default">Replay</button>
+                <button type="button" class="replay btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
             </div>
             <div class="modal-footer">
                 <p>Animated jedi logo gif created for May the Fourth promotion.</p><p>Lightsaber extends at start and plays only once.<br>Vector created in Illustrator. Animated in Photoshop.</p>
