--- a/index.html
+++ b/index.html
@@ -165,26 +165,8 @@
                 <button type="button" class="btn btn-default" onclick="window.open('resources/files/tree-care-proof1.pdf');" value="See PDF">See PDF</button><br>
             </div>
             <div class="modal-footer">
-                <p>Worked with Codeghost Creative partner.<br>Various designs were created and proposed to client.<br>Photos converted to grayscale in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
+                <p>Worked with <a href="www.codeghostcreative.com" target="_blank">Codeghost Creative</a> partner.<br>Various designs were created and proposed to client.<br>Photos converted to grayscale in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
                     <p>Client canceled project as it was no longer needed, so a final draft was never created.<br>Please click the button to view PDF.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Basic Modal</h4>
-            </div>
-            <div class="modal-body">
-                <h3>Modal Body</h3>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
