--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tiffany Cheng's Portfolio</title>
+    <title>Tiffany Cheng's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="resources/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Vidaloka" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-<div class="left-nav col-lg-3 col-sm-3 col-xs-12">
+<div class="left-nav col-lg-2 col-sm-3 col-xs-12">
     <div class="col-lg-12 col-sm-12 col-xs-6">
-        <img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head">
+        <a href="index.html"><img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head"></a>
     </div>
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <h1>Tiffany Cheng</h1>
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="right-main col-lg-9 col-sm-9 col-xs-12">
+<div class="right-main col-lg-10 col-sm-9 col-xs-12">
     <div class="col-lg-3 col-sm-4 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
     </div>
@@ -145,7 +145,7 @@
             </div>
             <div class="modal-footer">
                 <p>Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
-                    <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento.</p>
+                <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento.</p>
                 <p>Original concept sent by team lead:</p><img src="resources/images/team-og.png" class="img-responsive">
             </div>
         </div>
@@ -166,15 +166,15 @@
             </div>
             <div class="modal-footer">
                 <p>Worked with <a href="www.codeghostcreative.com" target="_blank">Codeghost Creative</a> partner.<br>Various designs were created and proposed to client.<br>Photos converted to grayscale in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
-                    <p>Client canceled project as it was no longer needed, so a final draft was never created.<br>Please click the button to view PDF.</p>
+                <p>Client canceled project as it was no longer needed, so a final draft was never created.<br>Please click the button to view PDF.</p>
             </div>
         </div>
     </div>
 </div>
 
 <footer>
-<p class="visible-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
-<p class="hidden-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
+    <p class="visible-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
+    <p class="hidden-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
 </footer>
 
 <script type="text/javascript" src="resources/javascript/jquery-3.1.1.slim.js"></script>
