--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <div class="col-lg-3 col-sm-4 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
     </div>
+    <div class="col-lg-3 col-sm-4 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-4 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
+    </div>
 </div>
 
 <!-- Begin Modals -->
@@ -172,6 +178,46 @@
     </div>
 </div>
 
+<div class="modal fade" id="icons2" tabindex="-1" role="dialog" aria-labelledby="icons2" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Icon Set</h4>
+            </div>
+            <div class="modal-body">
+                <img src="resources/images/icons/mouse.png" class="img-responsive">
+                <img src="resources/images/icons/camera.png" class="img-responsive">
+                <img src="resources/images/icons/vector.png" class="img-responsive">
+                <img src="resources/images/icons/print.png" class="img-responsive">
+                <img src="resources/images/icons/video.png" class="img-responsive">
+                <img src="resources/images/icons/music.png" class="img-responsive">
+                <img src="resources/images/icons/briefcase.png" class="img-responsive">
+            </div>
+            <div class="modal-footer">
+                <p>Icons originally developed for portfolio site.</p><p>Created in Illustrator.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="modal fade" id="gumpack" tabindex="-1" role="dialog" aria-labelledby="gumpack" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Design for Promotional Item</h4>
+            </div>
+            <div class="modal-body">
+                <img src="resources/images/gum_pack4a.png" class="img-responsive">
+            </div>
+            <div class="modal-footer">
+                <p>Illustrator and InDesign.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
 <footer>
     <p class="visible-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
     <p class="hidden-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
