--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <div class="col-lg-3 col-sm-4 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
     </div>
+    <div class="col-lg-3 col-sm-4 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
+    </div>
 </div>
 
 <!-- Begin Modals -->
@@ -200,7 +203,7 @@
         </div>
     </div>
 </div>
-    
+
 <div class="modal fade" id="gumpack" tabindex="-1" role="dialog" aria-labelledby="gumpack" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -209,7 +212,8 @@
                 <h4 class="modal-title">Design for Promotional Item</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/gum_pack4a.png" class="img-responsive">
+                <img src="resources/images/gum_pack4a.png" class="img-responsive"><br>
+                <img src="resources/images/gumpack.jpg" class="img-responsive">
             </div>
             <div class="modal-footer">
                 <p>Illustrator and InDesign.</p>
@@ -217,7 +221,25 @@
         </div>
     </div>
 </div>
-    
+
+<div class="modal fade" id="ornament" tabindex="-1" role="dialog" aria-labelledby="ornament" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Design for Promotional Item</h4>
+            </div>
+            <div class="modal-body">
+                <img src="resources/images/monkey_ornament4.png" class="img-responsive"><br>
+                <img src="resources/images/ornament.jpg" class="img-responsive">
+            </div>
+            <div class="modal-footer">
+                <p>Illustrator.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <footer>
     <p class="visible-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
     <p class="hidden-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
