--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <h1>Tiffany Cheng</h1>
-        <h2>Highlight Portfolio</h2>
+        <h2>Portfolio</h2>
         <p>Tags: vector, logo, icons, coding, print, photography, animation</p>
     </div>
 </div>
