--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h1>Tiffany Cheng</h1>
         <h2>Portfolio</h2>
         <p>Tags: vector, logo, icons, coding, print, photography, animation</p>
+        <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:tiffscheng@gmail.com">tiffscheng@gmail.com</a></p>
+        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="www.instagram.com/tiffanimals">tiffanimals</a></p>
+        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="www.linkedin.com/in/tiffscheng">tiffscheng</a></p>
     </div>
 </div>
 
