--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h2>Portfolio</h2>
         <p>Tags: vector, logo, icons, coding, print, photography, animation</p>
         <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:tiffscheng@gmail.com">tiffscheng@gmail.com</a></p>
-        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="http://www.instagram.com/tiffanimals">tiffanimals</a></p>
-        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="http://www.linkedin.com/in/tiffscheng">tiffscheng</a></p>
+        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="http://www.instagram.com/tiffanimals" target="_blank">tiffanimals</a></p>
+        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="http://www.linkedin.com/in/tiffscheng" target="_blank">tiffscheng</a></p>
     </div>
 </div>
 
