--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h2>Portfolio</h2>
         <p>Tags: vector, logo, icons, coding, print, photography, animation</p>
         <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:tiffscheng@gmail.com">tiffscheng@gmail.com</a></p>
-        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="http://www.instagram.com/tiffanimals" target="_blank">tiffanimals</a></p>
-        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="http://www.linkedin.com/in/tiffscheng" target="_blank">tiffscheng</a></p>
+        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="www.instagram.com/tiffanimals">tiffanimals</a></p>
+        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="www.linkedin.com/in/tiffscheng">tiffscheng</a></p>
     </div>
 </div>
 
@@ -192,13 +192,17 @@
                 <h4 class="modal-title">Icon Set</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/icons/mouse.png" class="img-responsive">
-                <img src="resources/images/icons/camera.png" class="img-responsive">
-                <img src="resources/images/icons/vector.png" class="img-responsive">
-                <img src="resources/images/icons/print.png" class="img-responsive">
-                <img src="resources/images/icons/video.png" class="img-responsive">
-                <img src="resources/images/icons/music.png" class="img-responsive">
-                <img src="resources/images/icons/briefcase.png" class="img-responsive">
+                <div class="container col-xs-12">
+                    <div class="row icons">
+                        <img src="resources/images/icons/mouse.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/camera.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/vector.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/print.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/video.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/music.png" class="img-responsive col-sm-3 col-xs-6">
+                        <img src="resources/images/icons/briefcase.png" class="img-responsive col-sm-3 col-xs-6">
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <p>Icons originally developed for portfolio site.</p><p>Created in Illustrator.</p>
