--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="left-nav col-lg-2 col-sm-4 col-xs-12">
     <div class="col-lg-12 col-sm-12 col-xs-6">
-        <a href="index.html"><img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head"></a>
+        <img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head">
     </div>
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <h1>Tiffany Cheng</h1>
@@ -27,13 +27,19 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
-    </div>
-    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#stpat"><img src="resources/images/thumbnails/stpatty-postcard_thumb.jpg" class="img-responsive"></a>
@@ -45,13 +51,7 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
-    </div>
-    <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
-    </div>
-    <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
+        <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
     </div>
 </div>
 
