--- a/index.html
+++ b/index.html
@@ -192,17 +192,7 @@
                 <h4 class="modal-title">Icon Set</h4>
             </div>
             <div class="modal-body">
-                <div class="container col-xs-12">
-                    <div class="row icons">
-                        <img src="resources/images/icons/mouse.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/camera.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/vector.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/print.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/video.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/music.png" class="img-responsive col-sm-3 col-xs-6">
-                        <img src="resources/images/icons/briefcase.png" class="img-responsive col-sm-3 col-xs-6">
-                    </div>
-                </div>
+                <img src="resources/images/icons2.jpg" class="img-responsive">
             </div>
             <div class="modal-footer">
                 <p>Icons originally developed for portfolio site.</p><p>Created in Illustrator.</p>
