--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#camera"><img src="resources/images/thumbnails/camera.gif" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -86,6 +89,24 @@
             </div>
             <div class="modal-footer">
                 <p>Animated jedi logo gif created for May the Fourth promotion.</p><p>Lightsaber extends at start and plays only once.<br>Vector created in Illustrator. Animated in Photoshop.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="modal fade" id="jedi" tabindex="-1" role="dialog" aria-labelledby="jedi" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Camera Icon Animation</h4>
+            </div>
+            <div class="modal-body">
+                <div id="jedi-gif"><img src="resources/images/camera.gif"></div><br>
+                <button type="button" class="replay btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
+            </div>
+            <div class="modal-footer">
+                <p>Animated camera icon.</p><p>Vector created in Illustrator. Animated in Photoshop.</p>
             </div>
         </div>
     </div>
