--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 </div>
     
-<div class="modal fade" id="jedi" tabindex="-1" role="dialog" aria-labelledby="jedi" aria-hidden="true">
+<div class="modal fade" id="camera" tabindex="-1" role="dialog" aria-labelledby="camera" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
