--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#camera"><img src="resources/images/thumbnails/camera.gif" class="img-responsive"></a>
+        <a href="#" class="btn" data-toggle="modal" data-target="#camera"><img src="resources/images/thumbnails/camera.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#gumpack"><img src="resources/images/thumbnails/gumpack_thumb.jpg" class="img-responsive"></a>
@@ -85,7 +85,7 @@
             </div>
             <div class="modal-body">
                 <div id="jedi-gif"><img src="resources/images/jedi-logo.gif"></div><br>
-                <button type="button" class="replay btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
+                <button type="button" class="replay-jedi btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
             </div>
             <div class="modal-footer">
                 <p>Animated jedi logo gif created for May the Fourth promotion.</p><p>Lightsaber extends at start and plays only once.<br>Vector created in Illustrator. Animated in Photoshop.</p>
@@ -93,7 +93,7 @@
         </div>
     </div>
 </div>
-    
+
 <div class="modal fade" id="camera" tabindex="-1" role="dialog" aria-labelledby="camera" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -102,8 +102,8 @@
                 <h4 class="modal-title">Camera Icon Animation</h4>
             </div>
             <div class="modal-body">
-                <div id="jedi-gif"><img src="resources/images/camera.gif"></div><br>
-                <button type="button" class="replay btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
+                <div id="cam-gif"><img src="resources/images/camera.gif"></div><br>
+                <button type="button" class="replay-cam btn btn-default"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span></button>
             </div>
             <div class="modal-footer">
                 <p>Animated camera icon.</p><p>Vector created in Illustrator. Animated in Photoshop.</p>
@@ -269,16 +269,18 @@
 
 <script type="text/javascript">
     var $j = jQuery.noConflict();
-
     $j(document).ready(function(){
         var modalSelect= $j(this).attr("data-targer");
         $j(".btn").click(function(){
             $j(modalSelect).modal('show');
         });
-
-        $j(".replay").click(function() {
+        $j(".replay-jedi").click(function() {
             var timestamp= new Date().getTime();
             $j("#jedi-gif").find('img').attr('src', 'resources/images/jedi-logo.gif'+'?'+timestamp);
+        });
+        $j(".replay-cam").click(function() {
+            var timestamp= new Date().getTime();
+            $j("#cam-gif").find('img').attr('src', 'resources/images/camera.gif'+'?'+timestamp);
         });
     });
 </script>
