--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 </div>
 
 <footer>
-    <p class="visible-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
-    <p class="hidden-lg">Responsive Bootstrap site created on 11/09/16 specifically for GE Digital.</p>
+    <p class="visible-lg">Responsive Bootstrap site created on 11/09/16.</p>
+    <p class="hidden-lg">Responsive Bootstrap site created on 11/09/16.</p>
 </footer>
 
 <script type="text/javascript" src="resources/javascript/jquery-3.1.1.slim.js"></script>
