--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#slidedeck"><img src="resources/images/thumbnails/slidedeck_thumb.jpg" class="img-responsive"></a>
     </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#int-photed"><img src="resources/images/thumbnails/int-photed_thumb.jpg" class="img-responsive"></a>
+    </div>
 </div>
 
 <!-- Begin Modals -->
@@ -248,11 +251,28 @@
                 <h4 class="modal-title">Design for Promotional Item</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/monkey_ornament4.png" class="img-responsive"><br>
+                <img src="resources/images/monkey_ornament.png" class="img-responsive"><br>
                 <img src="resources/images/ornament.jpg" class="img-responsive">
             </div>
             <div class="modal-footer">
                 <p>Illustrator.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="int-photed" tabindex="-1" role="dialog" aria-labelledby="int-photed" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Photo Editing</h4>
+            </div>
+            <div class="modal-body">
+                <img src="resources/images/int-photed.jpg" class="img-responsive">
+            </div>
+            <div class="modal-footer">
+                <p>Photoshop.</p>
             </div>
         </div>
     </div>
