--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#int-photed"><img src="resources/images/thumbnails/int-photed_thumb.jpg" class="img-responsive"></a>
     </div>
 </div>
+<div class="clearfix"></div>
 
 <!-- Begin Modals -->
 <div class="modal fade" id="icons" tabindex="-1" role="dialog" aria-labelledby="icons" aria-hidden="true">
