--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#tekshield"><img src="resources/images/thumbnails/tekshield_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -273,6 +276,25 @@
             </div>
             <div class="modal-footer">
                 <p>Photoshop.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-labelledby="tekshield" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">TekShield Product Page Wireframe and Design</h4>
+            </div>
+            <div class="modal-body">
+                <img src="resources/images/basic-wireframe.PNG" class="img-responsive">
+                <img src="resources/images/detailed-wireframe.PNG" class="img-responsive">
+                <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
+            </div>
+            <div class="modal-footer">
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery.</p>
             </div>
         </div>
     </div>
