--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
                 <h4 class="modal-title">TekShield Product Page Wireframe and Design</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/basic-wireframe.PNG" class="img-responsive">
-                <img src="resources/images/detailed-wireframe.PNG" class="img-responsive">
+                <img src="resources/images/basic-wireframe.png" class="img-responsive">
+                <img src="resources/images/detailed-wireframe.png" class="img-responsive">
                 <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
             </div>
             <div class="modal-footer">
-                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery.</p>
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Prototype in progress.</p>
             </div>
         </div>
     </div>
