--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 <h4 class="modal-title">TekShield Product Page Wireframe and Design</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/basic-wireframe.png" class="img-responsive">
-                <img src="resources/images/detailed-wireframe.png" class="img-responsive">
+                <img src="resources/images/basic-wireframe.PNG" class="img-responsive col-sm-6">
+                <img src="resources/images/detailed-wireframe.png" class="img-responsive col-sm-6">
                 <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
             </div>
             <div class="modal-footer">
