--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
             </div>
             <div class="modal-body">
                 <img src="resources/images/basic-wireframe.PNG" class="img-responsive col-sm-6">
-                <img src="resources/images/detailed-wireframe.png" class="img-responsive col-sm-6"><br>
+                <img src="resources/images/detailed-wireframe.png" class="img-responsive col-sm-6">
+                <p>&nbsp;</p>
                 <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
             </div>
             <div class="modal-footer">
