--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="modal-body">
                 <img src="resources/images/basic-wireframe.PNG" class="img-responsive col-sm-6">
                 <img src="resources/images/detailed-wireframe.png" class="img-responsive col-sm-6">
-                <p>&nbsp;</p>
+                <div class="row"></div>
                 <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
             </div>
             <div class="modal-footer">
