--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
                 <button type="button" class="btn btn-default" onclick="window.open('resources/files/tree-care-proof1.pdf');" value="See PDF">See PDF</button><br>
             </div>
             <div class="modal-footer">
-                <p>Worked with <a href="www.codeghostcreative.com" target="_blank">Codeghost Creative</a> partner.<br>Various designs were created and proposed to client.<br>Photos edited in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
-                <p>Client canceled project as it was no longer needed, so a final draft was never created.<br>Please click the button to view PDF.</p>
+                <p>Worked with <a href="www.codeghostcreative.com" target="_blank">Codeghost Creative</a> partner.<br>Photos edited in Photoshop- Working gray, dot gain 20%. Pages laid out in InDesign.</p>
             </div>
         </div>
     </div>
