--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
                 <img src="resources/images/basic-wireframe.PNG" class="img-responsive col-sm-6">
                 <img src="resources/images/detailed-wireframe.png" class="img-responsive col-sm-6">
                 <p>&nbsp;</p>
-                <button type="button" class="btn btn-default" onclick="window.open('/smk-tekshield');" value="See Working Prototype">Working Prototype</button>
+                <button type="button" class="btn btn-default" onclick="window.open('http://servermonkey.com/tekshield');" value="See the site">Visit Site</button>
             </div>
             <div class="modal-footer">
-                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Prototype in progress.</p>
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery.</p>
             </div>
         </div>
     </div>
