--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </div>
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <h1>Tiffany Cheng</h1>
-        <h2>Portfolio</h2>
+        <p><a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com" target="_blank"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+        <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
+        <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a></p>
+
         <p>Tags: web design, vector, logo, icons, coding, print, photography, animation</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:tiffscheng@gmail.com">tiffscheng@gmail.com</a></p>
-        <p><span class="glyphicon glyphicon-camera"></span> IG: <a href="www.instagram.com/tiffanimals">tiffanimals</a></p>
-        <p><span class="glyphicon glyphicon-briefcase"></span> LinkedIn: <a href="www.linkedin.com/in/tiffscheng">tiffscheng</a></p>
     </div>
 </div>
 
@@ -279,7 +279,7 @@
         </div>
     </div>
 </div>
-    
+
 <div class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-labelledby="tekshield" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
