--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <h1>Tiffany Cheng</h1>
-        <p><a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com" target="_blank"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+        <p><a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
         <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
         <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a></p>
 
