--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.tekshield.com');" value="See the site">Visit Site</button>
             </div>
             <div class="modal-footer">
-                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery.</p>
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Update: added interactivity.</p>
             </div>
         </div>
     </div>
