--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p><a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
         <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
         <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a></p>
+        <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" target="_blank"><img src="resources/images/icons/yelp-icon.png"></a>
 
         <p>Tags: web design, vector, logo, icons, coding, print, photography, animation</p>
     </div>
