--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             </div>
             <div class="modal-footer">
                 <p>Illustrator and InDesign.</p>
+                <p>Photo taken with Canon EF 28-135mm f/3.5</p>
             </div>
         </div>
     </div>
@@ -256,6 +257,7 @@
             </div>
             <div class="modal-footer">
                 <p>Illustrator.</p>
+                <p>Photo taken with Canon EF 28-135mm f/3.5</p>
             </div>
         </div>
     </div>
