--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
             </div>
             <div class="modal-footer">
-                <p>Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
+                <p>100% responsive design. Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
                 <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento.</p>
                 <p>Original concept sent by team lead:</p><img src="resources/images/team-og.png" class="img-responsive">
             </div>
@@ -277,7 +277,7 @@
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.tekshield.com');" value="See the site">Visit Site</button>
             </div>
             <div class="modal-footer">
-                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Update: added interactivity.</p>
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. 100% responsive design. Update: added interactivity.</p>
             </div>
         </div>
     </div>
