--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#stpat"><img src="resources/images/thumbnails/stpatty-postcard_thumb.jpg" class="img-responsive"></a>
     </div>
-    /*<div class="col-lg-3 col-sm-6 col-xs-12">
+    <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#selah"><img src="resources/images/thumbnails/selah_thumb.jpg" class="img-responsive"></a>
-    </div>*/
+    </div> -->
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#server"><img src="resources/images/thumbnails/server_thumb.jpg" class="img-responsive"></a>
     </div>
