--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 <div class="right-main col-lg-10 col-sm-8 col-xs-12">
     <div class="col-lg-3 col-sm-6 col-xs-12">
+    <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -277,7 +280,33 @@
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.tekshield.com');" value="See the site">Visit Site</button>
             </div>
             <div class="modal-footer">
-                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. 100% responsive design. Update: added interactivity.</p>
+                <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Responsive design. Update: added interactivity.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-labelledby="tekshield" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">ServerMonkey Business Site Development</h4>
+            </div>
+            <div class="modal-body">
+                <p class="col-sm-6">
+                    Original Mockup:
+                    <img src="resources/images/smkbiz-site-mockup" class="img-responsive">
+                </p>
+                <p class="col-sm-6">
+                    Actual Implementation:
+                    <img src="resources/images/smkbiz-site-actual" class="img-responsive">
+                </p>
+                <p>&nbsp;</p>
+                <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkeybusiness.com');" value="See the site">Visit Site</button>
+            </div>
+            <div class="modal-footer">
+                <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design.</p>
             </div>
         </div>
     </div>
