--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                 <h4 class="modal-title">ServerMonkey Business Site Development</h4>
             </div>
             <div class="modal-body">
-                <p class="col-sm-6">
+                <p class="col-sm-12">
                     Original Mockup:
-                    <img src="resources/images/smkbiz-site-mockup" class="img-responsive">
+                    <img src="resources/images/smkbiz-site-mockup.jpg" class="img-responsive">
                 </p>
-                <p class="col-sm-6">
+                <p class="col-sm-12">
                     Actual Implementation:
-                    <img src="resources/images/smkbiz-site-actual" class="img-responsive">
+                    <img src="resources/images/smkbiz-site-actual.jpg" class="img-responsive">
                 </p>
                 <p>&nbsp;</p>
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkeybusiness.com');" value="See the site">Visit Site</button>
