--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
 </div>
     
-<div class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-labelledby="tekshield" aria-hidden="true">
+<div class="modal fade" id="smkbiz" tabindex="-1" role="dialog" aria-labelledby="smkbiz" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
