--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
         <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a></p>
 
-        <p>Tags: web design, vector, logo, icons, coding, print, photography, animation</p>
+        <p>Tags: front end development, web design, vector illustration, logo creation, iconology, print, photography, animation</p>
     </div>
 </div>
 
 <div class="right-main col-lg-10 col-sm-8 col-xs-12">
     <div class="col-lg-3 col-sm-6 col-xs-12">
-    <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
+        <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#team"><img src="resources/images/thumbnails/our-team_thumb.jpg" class="img-responsive"></a>
@@ -184,8 +184,8 @@
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
             </div>
             <div class="modal-footer">
-                <p>100% responsive design. Content page displaying all ServerMonkey employees automatically sorts alphabetically. Restricted to site theme. Please click the "Visit Site" button to view functional page.</p>
-                <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento.</p>
+                <p>Responsive design. Content page displaying all ServerMonkey employees automatically sorts alphabetically and sorts based on pill selected. Please click the "Visit Site" button to view functional page.</p>
+                <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento CMS.</p>
                 <p>Original concept sent by team lead:</p><img src="resources/images/team-og.png" class="img-responsive">
             </div>
         </div>
