--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
             </div>
             <div class="modal-footer">
                 <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design.</p>
+                <p>All parts including shrinking header nav, collapse nav, contact form, interactive contact hover, designed and coded from scratch using the technologies listed above. Sole developer with help creating AJAX JS for form security.</p>
             </div>
         </div>
     </div>
