--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <div class="modal-footer">
                 <p>Responsive design. Content page displaying all ServerMonkey employees automatically sorts alphabetically and sorts based on pill selected. Please click the "Visit Site" button to view functional page.</p>
-                <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies used: HTML, CSS, JS, Boostrap, Magento CMS.</p>
+                <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies utilized: HTML, CSS, JS, Boostrap, Magento CMS.</p>
                 <p>Original concept sent by team lead:</p><img src="resources/images/team-og.png" class="img-responsive">
             </div>
         </div>
@@ -307,7 +307,7 @@
             </div>
             <div class="modal-footer">
                 <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design.</p>
-                <p>All parts including shrinking header nav, collapse nav, contact form, interactive contact hover, designed and coded from scratch using the technologies listed above. Sole developer with help creating AJAX JS for form security.</p>
+                <p>All parts including shrinking header nav, collapse nav, contact form, interactive contact hover, designed and coded from scratch using the technologies listed above. Sole developer after receiving mockup with help creating AJAX for form.</p>
             </div>
         </div>
     </div>
