--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <div class="container">
 <div class="left-nav col-lg-2 col-sm-4 col-xs-12">
     <div class="col-lg-12 col-sm-12 col-xs-6">
         <img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head">
@@ -316,6 +317,7 @@
 <footer>
 
 </footer>
+    </div>
 
 <script type="text/javascript" src="resources/javascript/jquery-3.1.1.slim.js"></script>
 <script type="text/javascript" src="resources/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
