--- a/index.html
+++ b/index.html
@@ -322,22 +322,5 @@
 <script type="text/javascript" src="resources/javascript/jquery-3.1.1.slim.js"></script>
 <script type="text/javascript" src="resources/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="resources/javascript/sort.js"></script>
-
-<script type="text/javascript">
-    var $j = jQuery.noConflict();
-    $j(document).ready(function(){
-        var modalSelect= $j(this).attr("data-targer");
-        $j(".btn").click(function(){
-            $j(modalSelect).modal('show');
-        });
-        $j(".replay-jedi").click(function() {
-            var timestamp= new Date().getTime();
-            $j("#jedi-gif").find('img').attr('src', 'resources/images/jedi-logo.gif'+'?'+timestamp);
-        });
-        $j(".replay-cam").click(function() {
-            var timestamp= new Date().getTime();
-            $j("#cam-gif").find('img').attr('src', 'resources/images/camera.gif'+'?'+timestamp);
-        });
-    });
-</script>
+<script type="text/javascript" src="resources/javascript/functions.js"></script>
 </body>
