--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#uhposter"><img src="resources/images/thumbnails/uhproject-poster_thumb.jpg" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -308,6 +311,24 @@
             <div class="modal-footer">
                 <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design.</p>
                 <p>All parts including shrinking header nav, collapse nav, contact form, interactive contact hover, designed and coded from scratch using the technologies listed above. Sole developer after receiving mockup with help creating AJAX for form.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="modal fade" id="uhproject" tabindex="-1" role="dialog" aria-labelledby="uhproject" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Senior Thesis Project Poster</h4>
+            </div>
+            <div class="modal-body">
+                <p>Instructor: Dr. Jerry Waite</p>
+                <button type="button" class="btn btn-default" onclick="window.open('resources/files/ChengTiffany_DIGM4399_poster.pdf');" value="See PDF">See PDF</button><br>
+            </div>
+            <div class="modal-footer">
+                <p>Complied to University of Houston's <a href="http://www.uh.edu/marketing/brand/graphic-standards/style-guidelines/" target="_blank">style guidelines</a>. Used Illustrator and InDesign.</p>
             </div>
         </div>
     </div>
