--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="#" class="btn" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#uhproject"><img src="resources/images/thumbnails/uhproject-poster_thumb.png" class="img-responsive"></a>
+        <a href="#" class="btn" data-toggle="modal" data-target="#uhproject"><img src="resources/images/thumbnails/uhproject_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
