--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
         <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
         <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a></p>
-
+        <p><a href="resources/files/TiffanyCheng_resume_RH.pdf">View Resume</a></p>
+        <br>
         <p>Tags: front end development, web design, vector illustration, logo creation, iconology, print, photography, animation</p>
     </div>
 </div>
