--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
         <p><a href="resources/files/TiffanyCheng_resume_RH.pdf">View Resume</a></p>
         <br>
-        <p>Tags: front end development, web design, vector illustration, logo creation, iconology, print, photography, animation</p>
+        <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print, photography, animation</p>
     </div>
 </div>
 
