--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
         <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a></p>
         <br>
-        <p><a href="resources/files/TiffanyCheng_resume_RH.pdf">View Resume</a></p>
+        <p><a href="resources/files/TiffanyCheng_resume_RH.pdf" target="_blank">View Resume</a></p>
         <br>
         <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print, photography, animation</p>
     </div>
