--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
 <div class="right-main col-lg-10 col-sm-8 col-xs-12">
     <div class="col-lg-3 col-sm-6 col-xs-12">
+        <a href="#" class="btn" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.png" class="img-responsive"></a>
+    </div>
+    <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -331,6 +334,23 @@
             </div>
             <div class="modal-footer">
                 <p>Complied to University of Houston's <a href="http://www.uh.edu/marketing/brand/graphic-standards/style-guidelines/" target="_blank">style guidelines</a>. Used Illustrator and InDesign.</p>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="modal fade" id="dashboard" tabindex="-1" role="dialog" aria-labelledby="dashboard" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Company Reporting Dashboard</h4>
+            </div>
+            <div class="modal-body">
+                <button type="button" class="btn btn-default" onclick="window.open('https://tiffscheng.github.io/dashboard/');" value="See PDF">See Demo</button><br>
+                <button type="button" class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/dashboard');" value="See PDF">See Code</button>
+            </div>
+            <div class="modal-footer">
+                <p>Site was created for larger resolutions, not fully responsive.</p>
             </div>
         </div>
     </div>
