Change SMK modal

--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@
                 <h4 class="modal-title">Our Team Page</h4>
             </div>
             <div class="modal-body">
-                <img src="resources/images/our-team_cap.jpg" class="img-responsive"><br>
+                <div class="row">
+                    <div class="col-sm-6">Final version:<br><img src="resources/images/our-team_cap.jpg" class="img-responsive"></div>
+                    <div class="col-sm-6">Originally proposed by Creative Director:<br><img src="resources/images/team-og.png" class="img-responsive"></div>
+                </div>
+                <br>
                 <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkey.com/our-team');" value="Visit Site">Visit Site</button><br>
             </div>
             <div class="modal-footer">
                 <p>Responsive design. Content page displaying all ServerMonkey employees automatically sorts alphabetically and sorts based on pill selected. Please click the "Visit Site" button to view functional page.</p>
                 <p>Shot and edited most photos using Canon Rebel T5i and Photoshop.<br>Other competencies utilized: HTML, CSS, JS, Boostrap, Magento CMS.</p>
-                <p>Original concept sent by team lead:</p><img src="resources/images/team-og.png" class="img-responsive">
             </div>
         </div>
     </div>
