--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="right-main col-lg-10 col-sm-8 col-xs-12">
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a href="#" class="btn" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.png" class="img-responsive"></a>
+        <a href="#" class="btn" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.jpg" class="img-responsive"></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
         <a href="#" class="btn" data-toggle="modal" data-target="#smkbiz"><img src="resources/images/thumbnails/smkbiz_thumb.jpg" class="img-responsive"></a>
