--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tiffany Cheng's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="resources/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Vidaloka" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style-copy.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -210,8 +210,8 @@
                     <img src="resources/images/server_datingsite.jpg" class="img-responsive">
                 </div>
                 <div class="modal-footer">
-                    <p>Popular dating app design recreated.</p>
-                    <p>Vectors, including server and faux fur rug, 100% created in Illustrator.</p>
+                    <p>Imitated popular dating app design for site hero banner.</p>
+                    <p>All vectors, including server and faux fur rug, 100% created in Illustrator.</p>
                 </div>
             </div>
         </div>
@@ -285,8 +285,7 @@
                     <img src="resources/images/icons2.jpg" class="img-responsive">
                 </div>
                 <div class="modal-footer">
-                    <p>Icons originally developed for portfolio site.</p>
-                    <p>Created in Illustrator.</p>
+                    <p>Original icons created in Adobe Illustrator.</p>
                 </div>
             </div>
         </div>
