--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,7 @@
 <body>
 <section>
     <div class="container">
-        <img src="resources/images/port.jpg" class="photo img-circle img-responsive" title="My dog has a big head" align="left">
+        <img src="resources/images/port.jpg" class="photo img-circle img-responsive pull-right" title="My dog has a big head">
         <h1>Tiffany Cheng</h1>
         <p>
             <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
@@ -21,10 +22,10 @@
         </p>
         <br>
         <p>Resume: <a href="resources/files/TiffanyCheng_Resume_3-23-18.docx" target="_blank">Word DOC</a> | <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank">Stylized PDF</a></p>
-        <br>
         <!--
         <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
             photography, animation</p> -->
+        <br>
     </div>
 </section>
 <section>
@@ -70,7 +71,7 @@
 </section>
 <section>
     <div class="container">
-        <h2>Print</h2>
+        <h2>Print and Other</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" class="btn" data-toggle="modal" data-target="#wireframe"><img src="resources/images/thumbnails/wireframe_thumb.jpg" class="img-responsive"></a>
@@ -451,12 +452,25 @@
         </div>
     </div>
 </article>
-</body>
-<footer>
 
+<footer>
+    <div class="container">
+        <div class="pull-left"><p><i>Please be continue to check back as this site is still a work in progress.</i></p></div>
+        <div class="pull-right">
+            <p>
+                <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
+                <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
+                <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
+                <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+            </p>
+        </div>
+    </div>
 </footer>
 
 <script type="text/javascript" src="resources/javascript/jquery-3.1.1.slim.js"></script>
 <script type="text/javascript" src="resources/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="resources/javascript/sort.js"></script>
 <script type="text/javascript" src="resources/javascript/functions.js"></script>
+
+</body>
+</html>
